# yawper-client

./: Cargo.toml
.github/workflows/: release.yml
src/: main.rs
src/backend/: backend.rs  mod.rs  server_connection.rs
src/backend/voice_channel/: mod.rs  voice_input.rs  voice_output.rs
src/gui/: app.rs  left_panel.rs  mod.rs  right_panel.rs
src/messages/: client_message.rs  lobby_message.rs  mod.rs  room_message.rs  voice_message.rs
