[package]
name = "yawper-client"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
wtransport = {version = "0.7.0", features = ["dangerous-configuration"]}


# Audio features
audiopus = "0.2.0"
cpal = "0.17.1"
ringbuf = "0.4.8"
crossbeam-channel = "0.5.15"
eframe = "0.33.3"
egui = "0.33.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
